syntax = "proto3";

package helloworld;

option go_package = "06_grpc/proto";

// 在 go-learn 目录下
// 生成 Protobuf 消息代码: protoc -I 06_grpc/proto helloworld.proto --go_out=.
// 生成 gRPC 服务代码: protoc -I 06_grpc/proto helloworld.proto --go-grpc_out=.

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloWorld {
  rpc SayHello(HelloRequest) returns(HelloResponse);
}
